june7_server_gowtham

--- a/api/env/.env.local
+++ b/api/env/.env.local
@@ -1,5 +1,5 @@
  port            =   2002
-mongoURI        =   "mongodb://localhost:27017/Artalux"
+mongoURI        =   "mongodb://localhost:27017/HuRPzE"
 siteUrl         =   "http://localhost:3000"
 secretOrKey     =   "obmalnew"
 ipfskey         =   "284kROy1rlYPzL5nKLoE08JBXxN"
