--- a/admin/package.json
+++ b/admin/package.json
@@ -28,8 +28,10 @@
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
+    "react-bootstrap": "^2.4.0",
     "react-chartist": "0.14.3",
     "react-csv": "^2.0.3",
+    "react-data-table-component": "^7.5.2",
     "react-datepicker": "^3.4.1",
     "react-dom": "16.13.1",
     "react-ga": "^3.3.0",
@@ -46,6 +48,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.0.1",
+    "styled-components": "^5.3.5",
     "web3": "^1.3.5",
     "yarn": "^1.22.11"
   },
