--- a/admin/package.json
+++ b/admin/package.json
@@ -69,7 +69,7 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
   },
-  "homepage": "https://artalux.com/xulatra",
+  "homepage": "http://nftdemo.bimaticz.com/xulatra",
   "optionalDependencies": {
     "@types/googlemaps": "3.39.6",
     "@types/markerclustererplus": "2.1.33",
